more working updates with marketing on front page
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/home/features.html
+++ b/layouts/partials/home/features.html
@@ -6,10 +6,11 @@
     </div>
     <div class="col col-12 col-xl-7 pl-xl-5">
       <h2>Create AAA games and 3D visualizations</h2>
-      <p>O3DE has been developed by the community for cutting-edge photorealistic graphics and complex, real-time interactions. 
-        Build deep player experiences using the visual scripting tools provided with Script Canvas, and deliver your product to multiple platforms, 
-        from top-shelf gaming PCs to mobile devices. Use high-performance, high-precision math libraries and native PhysX support to develop 
-        realistic interactions and behaviors. Create rich, believable worlds with our terrain tools. Make awesome stuff!</p>
+      <p>O3DE has been developed by the community for cutting-edge photorealisticgraphics and complex, real-time interactions. 
+        Build deep player experiences using the visual scripting tools provided with Script Canvas, and deliver your product to 
+        multiple platforms, from top-shelf gaming PCs to mobile devices. Use high-performance, high-precision math libraries 
+        and native PhysX support to develop realistic interactions and behaviors Create rich, believable worlds with our terrain tools
+        while building interactive experiences.</p>
     </div>
   </div>
   <div class="row feature">
@@ -18,8 +19,7 @@
       <p>O3DE is built for extensibility and customization. Add new shaders, new editing tools, new features&mdash;and even entirely new 
         development workflows to your O3DE-based project! Use established languages and tools like C++, CMake, and Qt to build atop O3DE with well-defined templates, styles,
         and interfaces. Develop new graphics models for the Atom renderer with the flexible shader and material systems. Use specialized components, 
-        called "Gems", to add in the functionality you need&mdash;including both O3DE-developed features and 3rd party ones.
-        </p>
+        called "Gems", to add in the functionality you need&mdash;including both O3DE-developed features and 3rd party ones.</p>
     </div>
     <div class="col col-12 col-xl-5 mx-auto">
       <img src="/img/home/feature2.jpg" alt="TEXT HERE"/>
@@ -30,9 +30,10 @@
         <img src="/img/home/feature3.jpg" alt="TEXT HERE"/>
       </div>
       <div class="col col-12 col-xl-7 pl-xl-5">
-        <h2>Integrate with your favorite tools and services</h2>
-        <p>Need a specific feature or support for a specific cloud service? There might be a Gem for it! Or contribute your own Gems and share your tools and libraries
-          with the rest of the O3DE community. Think of O3DE as an "SDK" where your project includes just the tools, libraries, and services you need!</p>
+        <h2>Integrate with your favorite cloud services</h2>
+        <p>O3DE provides specific features and support for cloud services. Developers can directly access cloud storage or game-specific backend cloud services through Gems. 
+           Developers can also contribute their own Gems and enable support for their favorite cloud services. Think of O3DE as an "SDK" where projects
+           include just the tools, libraries, and services that developers need.</p>
       </div>
   </div>
 </div>
