another typo fix
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/home/features.html
+++ b/layouts/partials/home/features.html
@@ -9,7 +9,7 @@
       <p>O3DE has been developed by the community for cutting-edge photorealistic graphics and complex, real-time interactions. 
         Build deep player experiences using the visual scripting tools provided with Script Canvas, and deliver your product to 
         multiple platforms, from top-shelf gaming PCs to mobile devices. Use high-performance, high-precision math libraries 
-        and native PhysX support to develop realistic interactions and behaviors Create rich, believable worlds with our terrain tools
+        and native PhysX support to develop realistic interactions and behaviors. Create rich, believable worlds with our terrain tools
         while building interactive experiences.</p>
     </div>
   </div>
