--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -25,5 +25,9 @@
         {{ partial "menu-loop.html" . }}
 
       </div>  
+
+      <div class="search">
+        {{ partial "search.html" }}
+      </div>  
   </div> 
 </div>
