--- a/layouts/partials/home/features.html
+++ b/layouts/partials/home/features.html
@@ -5,21 +5,20 @@
       <img src="/img/home/feature1.jpg" alt="TEXT HERE"/>
     </div>
     <div class="col col-12 col-xl-7 pl-xl-5">
-      <h2>Create AAA games and 3D visualizations</h2>
-      <p>O3DE has been developed by the community for cutting-edge photorealistic graphics and complex, real-time interactions. 
-        Build deep player experiences using the visual scripting tools provided with Script Canvas, and deliver your product to 
-        multiple platforms, from top-shelf gaming PCs to mobile devices. Use high-performance, high-precision math libraries 
-        and native PhysX support to develop realistic interactions and behaviors. Create rich, believable worlds with our terrain tools
-        while building interactive experiences.</p>
+      <h2>Create AAA games and high-fidelity simulations</h2>
+      <p>O3DE has been developed with with cutting-edge, real-time graphics and complex interactions in mind. 
+        Create robust, engaging experiences with O3DE's multi-threaded photorealistic renderer, extensible 3D content editor,
+         data-driven character animation system, real-time physics engine, and access to a growing open source community. </p>
     </div>
   </div>
   <div class="row feature">
     <div class="col col-12 col-xl-7 pr-xl-5">
-      <h2>Build with modular components</h2>
-      <p>O3DE is built for extensibility and customization. Add new shaders, new editing tools, new features&mdash;and even entirely new 
-        development workflows to your O3DE-based project. Use established languages and tools like C++, CMake, and Qt to build atop O3DE with well-defined templates, styles,
-        and interfaces. Develop new graphics models for the Atom renderer with the flexible shader and material systems. Use specialized components, 
-        called "Gems", to add in the functionality you need&mdash;including both O3DE-developed features and 3rd party ones.</p>
+      <h2>Built for extensibility</h2>
+      <p>O3DE's modular architecture is built for customization from day one. 
+        Each one of O3DE's integrated components (called "Gems") can be adopted separately, 
+        giving you access to the specific functionality needed for your game or application.</p>p>
+        <p>Add new editing tools, features, and development workflows to your projects, or choose from a
+           variety of community-maintained Gems to extend and enhance the engine's capabilities.</p>
     </div>
     <div class="col col-12 col-xl-5 mx-auto">
       <img src="/img/home/feature2.jpg" alt="TEXT HERE"/>
@@ -31,9 +30,9 @@
       </div>
       <div class="col col-12 col-xl-7 pl-xl-5">
         <h2>Integrate with your favorite cloud services</h2>
-        <p>O3DE provides specific features and support for cloud services. Developers can directly access cloud storage or game-specific backend cloud services through Gems. 
-           Developers can also contribute their own Gems and enable support for their favorite cloud services. Think of O3DE as an "SDK" where projects
-           include just the tools, libraries, and services that developers need.</p>
+        <p>O3DE's Gem system provides integrations and support for cloud services to add additional functionality
+           to games and simulations. Choose from existing backend cloud modules, 
+           or create your own Gems with custom capabilities to bring your favorite cloud services to your projects.</p>
       </div>
   </div>
 </div>
