fixed html error
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/home/features.html
+++ b/layouts/partials/home/features.html
@@ -16,7 +16,7 @@
       <h2>Built for extensibility</h2>
       <p>O3DE's modular architecture is built for customization from day one. 
         Each one of O3DE's integrated components (called "Gems") can be adopted separately, 
-        giving you access to the specific functionality needed for your game or application.</p>p>
+        giving you access to the specific functionality needed for your game or application.</p>
         <p>Add new editing tools, features, and development workflows to your projects, or choose from a
            variety of community-maintained Gems to extend and enhance the engine's capabilities.</p>
     </div>
