add footer to all pages
Signed-off-by: Celeste Horgan <celeste@cncf.io>

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -5,4 +5,5 @@
 {{ define "main" }}
 {{ partial "blog/hero.html" . }}
 {{ partial "blog/content.html" . }}
+{{ partial "footer.html" . }}
 {{ end }}
