--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -5,4 +5,5 @@
 {{ define "main" }}
 {{ partial "blog/hero.html" . }}
 {{ partial "blog/post-list.html" . }}
+{{ partial "footer.html" . }}
 {{ end }}
