--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -11,7 +11,9 @@
             </div>
             <div class="col-12 col-md-12 col-xl-10 order-3 order-xl-2">
               <h1 class="title">{{ .Page.Title | markdownify }}</h1>
-              {{ partial "docs/content.html" . }}     
+              {{ partial "docs/content.html" . }}  
+              <hr class="mt-5" />   
+              {{ partial "footer-content.html" . }}
             </div>
               {{ if eq ($.Param "toc") true }}
                 <div class="col-12 col-xl-2 pt-5 order-2 order-xl-3">
