testing some community page changes
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/blog-display.html
+++ b/layouts/partials/blog-display.html
@@ -4,6 +4,7 @@
   <div class="row">
       <div class="col mx-auto">
           <h2>Blog</h2>
+          <p>What’s going on in the O3DE community? Read the blog posts and catch up on the latest news, insights, and feature development.</p>
       </div>
   </div>
   <div class="row">
