--- a/layouts/partials/community/hero.html
+++ b/layouts/partials/community/hero.html
@@ -3,7 +3,7 @@
 <div class="community-hero d-flex align-items-center">
   <div class="container hero-inner text-center">
     <h2> Connect with the O3DE Community </h2>
-    <h3>  Get connected, get inspired, and get to know the many diverse people who contribute to this open-source effort! </h3>
+    <p>  Get connected, get inspired, and get to know the many diverse people who contribute to this open-source effort! </p>
     {{ $social := site.Params.social }}
     {{ range $social }}
     {{ $color := .color }}
