--- a/layouts/partials/community/hero.html
+++ b/layouts/partials/community/hero.html
@@ -2,7 +2,8 @@
 {{ $desc  := site.Params.description | markdownify }}
 <div class="community-hero d-flex align-items-center">
   <div class="container hero-inner text-center">
-    <h2> Join the community! </h2>
+    <h2> Connect with the O3DE Community </h2>
+    <p>  Get connected, get inspired, and get to know the many diverse people who contribute to this open-source effort! </p>
     {{ $social := site.Params.social }}
     {{ range $social }}
     {{ $color := .color }}
