--- a/layouts/partials/footer-content.html
+++ b/layouts/partials/footer-content.html
@@ -1,8 +1,21 @@
 {{ $year := now.Year }}
 {{ with site.Copyright }}
 <p>&copy; {{ $year }} {{ . }}</p>
-<p>&copy; {{ $year }} The Linux Foundation. All rights reserved. 
-The Linux Foundation has registered trademarks and uses trademarks. 
-For a list of trademarks of The Linux Foundation, 
-please see our <a href="https://www.linuxfoundation.org/trademark-usage" target="_blank">Trademark Policy</a> page.</p>
+<p>&copy; {{ $year }} Open 3D Engine Contributors 
+    <br>
+    Documentation Distributed under CC BY 4.0.  
+    For our trademark, privacy and antitrust policies, code of conduct, and terms of use, 
+    please click the applicable link below or see https://www.lfprojects.org.
+    <br>
+    <ul>
+        <li><a href="https://lfprojects.org/policies/trademark-policy/">Trademark Policy</a></li>
+        <li><a href="https://lfprojects.org/policies/privacy-policy/">Privacy Policy</a></li>
+        <li><a href="https://lfprojects.org/policies/antitrust-policy/">Antitrust Policy</a></li>
+        <li><a href="https://lfprojects.org/policies/code-of-conduct/">Code of Conduct</a></li>
+        <li><a href="https://lfprojects.org/policies/terms-of-use/">Terms of Use</a></li>
+    </ul>
+    <br>
+    The Linux Foundation has registered trademarks and uses trademarks. 
+    For a list of trademarks of The Linux Foundation, 
+    please see our <a href="https://www.linuxfoundation.org/trademark-usage" target="_blank">Trademark Policy</a> page.</p>
 {{ end }}
