minor terminology fix
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/footer-content.html
+++ b/layouts/partials/footer-content.html
@@ -2,7 +2,7 @@
 {{ with site.Copyright }}
 <p>&copy; {{ $year }} {{ . }}</p>
 <p>For our trademark, privacy and antitrust policies, code of conduct, and terms of use, 
-    please click the applicable link below or see <a href= "">https://www.lfprojects.org</a>.
+    please click the applicable link below or visit <a href= "">https://www.lfprojects.org</a>.
     <ul>
         <li><a href="https://lfprojects.org/policies/trademark-policy/">Trademark Policy</a></li>
         <li><a href="https://lfprojects.org/policies/privacy-policy/">Privacy Policy</a></li>
