--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -216,6 +216,7 @@ $width: '59vw';
   background-image: url(/img/home/footer-bg.png)
   background-size: cover
   background-color: $o3de-darkblue
+  font-color: $o3de-lightblue
   @include media-breakpoint-up(lg)
     height: 300px
 
