--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -110,7 +110,7 @@ h1, h2, h3, h4, h5, h6
   margin-top: 1.8rem
 
 a 
-  color: $o3de-mediumblue
+  color: $o3de-lightblue
   &:hover, &:active 
     color: $o3de-blue
     text-decoration: none
@@ -231,7 +231,6 @@ $width: '59vw';
 // layouts/community/section.html 
 
 .community-hero 
-  filter: drop-shadow(0px 15px 15px rgba(0, 0, 0, 0.9))
   background-color: $o3de-darkblue  
   color: $o3de-white
   height: 40vh
