updated downloads page to only have clone option
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/download/hero.html
+++ b/layouts/partials/download/hero.html
@@ -8,6 +8,28 @@
           Download Open 3D Engine
         </h1>
         <p class="desc">
+          Fork and clone the O3DE project to build the engine or contribute code. <a href="https://docs.o3de.org/docs/welcome-guide/setup/">Read the O3DE setup docs to get started.</a>
+
+          <b>NOTE: This is a Developer Preview release. There will be full binaries and an installer provided for a forthcoming version.</b>
+        </p>
+        <p id="download-page-buttons">
+          <a href="https://github.com/o3de/o3de" class="my-3 mr-3 btn btn-lg btn-secondary text-white" data-os="Windows">Clone on GitHub</a>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+<!--
+{{ $title := site.Title }}
+{{ $desc  := site.Params.description | markdownify }}
+<div class="scalable download-hero d-flex align-items-center">
+  <div class="container hero-inner">
+    <div class="row">
+      <div class="col col-12 text-center">
+        <h1 class="title">
+          Download Open 3D Engine
+        </h1>
+        <p class="desc">
           Download the latest stable version of O3DE for your operating system. 
         </p>
         <p id="download-page-buttons">
@@ -19,3 +41,4 @@
     </div>
   </div>
 </div>
+-->
