fixes to style and downloads page
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/download/hero.html
+++ b/layouts/partials/download/hero.html
@@ -8,13 +8,12 @@
           Download Open 3D Engine
         </h1>
         <p class="desc">
-          Fork and clone the O3DE project to build the engine or contribute code. <a href="https://docs.o3de.org/docs/welcome-guide/setup/">Read the O3DE setup docs to get started.</a>
-
           <b>NOTE: This is a Developer Preview release. There will be full binaries and an installer provided for a forthcoming version.</b>
         </p>
         <p id="download-page-buttons">
-          <a href="https://github.com/o3de/o3de" class="my-3 mr-3 btn btn-lg btn-secondary text-white" data-os="Windows">Clone on GitHub</a>
+          <a href="https://github.com/o3de/o3de" class="my-3 mr-3 btn btn-lg btn-secondary text-white" data-os="Windows">Access O3DE on GitHub</a>
         </p>
+        <p>By downloading, you agree to the <a href= "">Terms of Use</a>.</p>
       </div>
     </div>
   </div>
