--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -110,7 +110,7 @@ h1, h2, h3, h4, h5, h6
   margin-top: 1.8rem
 
 a 
-  color: $o3de-lightblue
+  color: $o3de-darkblue
   &:hover, &:active 
     color: $o3de-blue
     text-decoration: none
@@ -216,6 +216,8 @@ $width: '59vw';
   background-image: url(/img/home/footer-bg.png)
   background-size: cover
   background-color: $o3de-darkblue
+  .a 
+    color: $o3de-lightblue
   @include media-breakpoint-up(lg)
     height: 300px
 
