more link color fixes
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -216,8 +216,10 @@ $width: '59vw';
   background-image: url(/img/home/footer-bg.png)
   background-size: cover
   background-color: $o3de-darkblue
-  .a 
-    color: $o3de-lightblue
+  .a: 
+    &:hover, &:active 
+      color: $o3de-lightblue
+      text-decoration: none
   @include media-breakpoint-up(lg)
     height: 300px
 
