syntax error fix
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -216,7 +216,7 @@ $width: '59vw';
   background-image: url(/img/home/footer-bg.png)
   background-size: cover
   background-color: $o3de-darkblue
-  .a: 
+  .a 
     &:hover, &:active 
       color: $o3de-lightblue
       text-decoration: none
