more style fixes!
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -110,9 +110,9 @@ h1, h2, h3, h4, h5, h6
   margin-top: 1.8rem
 
 a 
-  color: $o3de-darkblue
+  color: $o3de-blue
   &:hover, &:active 
-    color: $o3de-blue
+    color: $o3de-lightblue
     text-decoration: none
 
   // give code some base styling 
