--- a/layouts/partials/download/hero.html
+++ b/layouts/partials/download/hero.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col col-12 text-center">
         <h1 class="title">
-          Download Open 3D Engine
+          Get Open 3D Engine
         </h1>
         <p class="desc">
           <b>NOTE: This is a Developer Preview release. There will be full binaries and an installer provided for a forthcoming version.</b>
