--- a/layouts/partials/download/hero.html
+++ b/layouts/partials/download/hero.html
@@ -5,6 +5,27 @@
     <div class="row">
       <div class="col col-12 text-center">
         <h1 class="title">
+          Get Open 3D Engine
+        </h1>
+        <p class="desc">
+          <b>NOTE: This is a Developer Preview release. There will be full binaries and an installer provided for a forthcoming version.</b>
+        </p>
+        <p id="download-page-buttons">
+          <a href="https://github.com/o3de/o3de" class="my-3 mr-3 btn btn-lg btn-secondary text-white" data-os="Windows">Access O3DE on GitHub</a>
+        </p>
+        <p>By downloading, you agree to the <a href= "">Terms of Use</a>.</p>
+      </div>
+    </div>
+  </div>
+</div>
+<!--
+{{ $title := site.Title }}
+{{ $desc  := site.Params.description | markdownify }}
+<div class="scalable download-hero d-flex align-items-center">
+  <div class="container hero-inner">
+    <div class="row">
+      <div class="col col-12 text-center">
+        <h1 class="title">
           Download Open 3D Engine
         </h1>
         <p class="desc">
@@ -19,3 +40,4 @@
     </div>
   </div>
 </div>
+-->
