testing variable size images
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -181,7 +181,7 @@ $width: '59vw';
 // layouts/partial/download/hero.html
 
 .download-hero 
-  background-image: url('/img/download/hero.jpg')
+  background-image: url('/img/download/hero-alt.jpg')
   background-size: cover
 
 .active-os-cta
