fix to downloads page cover  height
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -181,8 +181,8 @@ $width: '59vw';
 // layouts/partial/download/hero.html
 
 .download-hero 
-  background-image: url('/img/download/hero-alt.jpg')
-  background-size: cover
+  background-image: url('/img/download/hero.jpg')
+  background-size: 50% auto
 
 .active-os-cta
   background-color: $o3de-blue
