More downloads page work (#607)
* updated downloads page to only have clone option

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* fixes to style and downloads page

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* more link color fixes

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* syntax error fix

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* more style fixes!

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* removed drop shadow

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* typo fixed

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* testing variable size images

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* ohhh, yet more style and link changes

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* fix to downloads page cover  height

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* undo bad css element choice

Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -112,7 +112,7 @@ h1, h2, h3, h4, h5, h6
 a 
   color: $o3de-blue
   &:hover, &:active 
-    color: $o3de-lightblue
+    color: $o3de-mediumblue
     text-decoration: none
 
   // give code some base styling 
@@ -182,7 +182,7 @@ $width: '59vw';
 
 .download-hero 
   background-image: url('/img/download/hero.jpg')
-  background-size: cover
+  background-size: 50% auto
 
 .active-os-cta
   background-color: $o3de-blue
@@ -217,7 +217,7 @@ $width: '59vw';
   background-color: $o3de-darkblue
   .a 
     &:hover, &:active 
-      color: $o3de-lightblue
+      color: $o3de-darkblue
       text-decoration: none
   @include media-breakpoint-up(lg)
     height: 300px
