fixed bg image on downloads page i think
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -182,7 +182,7 @@ $width: '59vw';
 
 .download-hero 
   background-image: url('/img/download/hero.jpg')
-  background-size: 50% auto
+  background-size: cover
 
 .active-os-cta
   background-color: $o3de-blue
