--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -4,10 +4,13 @@
 <div class="scalable home-hero d-flex align-items-center">
   <div class="container-fluid hero-inner">
     <div class="row">
-      <div class="col col-12 col-xl-5 pl-5">
+      <div class="col col-12 col-xl-7 pl-7">
           <h1 class="title">
             {{ $title }}
           </h1>
+          <h3 class="title">
+            An open-source, real-time 3D development engine
+          </h3>
 
           {{ with $desc }}
           <p class="desc">
