--- a/layouts/partials/home/features.html
+++ b/layouts/partials/home/features.html
@@ -1,18 +1,20 @@
-<section class="container-fluid home-features p-5">
-  <div class="container">
-  <div class="row feature">
-    <div class="col col-12 col-xl-5 mx-auto">
-      <img src="/img/home/feature1.jpg" alt="TEXT HERE"/>
+<section class="container-fluid home-features pl-xl-0 pr-xl-0">
+  <div class="d-flex flex-row align-items-center">
+    <div class="col col-12 col-xl-5">
+      <img src="/img/home/feature1.jpg" alt="TEXT HERE" class="features-img img-fluid"/>
     </div>
-    <div class="col col-12 col-xl-7 pl-xl-5">
+    <div class="col col-12 col-xl-7 features-text">
       <h2>Create AAA games and high-fidelity simulations</h2>
       <p>O3DE has been developed with with cutting-edge, real-time graphics and complex interactions in mind. 
         Create robust, engaging experiences with O3DE's multi-threaded photorealistic renderer, extensible 3D content editor,
          data-driven character animation system, real-time physics engine, and access to a growing open source community. </p>
     </div>
   </div>
-  <div class="row feature">
-    <div class="col col-12 col-xl-7 pr-xl-5">
+  <div class="d-flex flex-row-reverse align-items-center features-mid-content">
+    <div class="col col-12 col-xl-5">
+      <img src="/img/home/feature2.jpg" alt="TEXT HERE" class="features-img-reverse img-fluid"/>
+    </div>
+    <div class="col col-12 col-xl-7 features-text-reverse">
       <h2>Built for extensibility</h2>
       <p>O3DE's modular architecture is built for customization from day one. 
         Each one of O3DE's integrated components (called "Gems") can be adopted separately, 
@@ -20,20 +22,16 @@
         <p>Add new editing tools, features, and development workflows to your projects, or choose from a
            variety of community-maintained Gems to extend and enhance the engine's capabilities.</p>
     </div>
-    <div class="col col-12 col-xl-5 mx-auto">
-      <img src="/img/home/feature2.jpg" alt="TEXT HERE"/>
-    </div>
   </div>
-    <div class="row feature">
-      <div class="col col-12 col-xl-5 mx-auto">
-        <img src="/img/home/feature3.jpg" alt="TEXT HERE"/>
+  <div class="d-flex flex-row align-items-center">
+      <div class="col col-12 col-xl-5">
+        <img src="/img/home/feature3.jpg" alt="TEXT HERE" class="features-img img-fluid"/>
       </div>
-      <div class="col col-12 col-xl-7 pl-xl-5">
+      <div class="col col-12 col-xl-7 features-text">
         <h2>Integrate with your favorite cloud services</h2>
         <p>O3DE's Gem system provides integrations and support for cloud services to add additional functionality
            to games and simulations. Choose from existing backend cloud modules, 
            or create your own Gems with custom capabilities to bring your favorite cloud services to your projects.</p>
       </div>
   </div>
-</div>
 </section>
