--- a/layouts/partials/home/get-started.html
+++ b/layouts/partials/home/get-started.html
@@ -1,11 +1,7 @@
-<section class="container-fluid home-getstarted p-5">
-  <div class="container">
-    <div class="row">
-      <div class="col col-12">
-        <h1>Get started with O3DE</h4>
-        <h4>Watch our introductory tutorial on O3DE below, or dive right into O3DE’s <a href="#" target="_blank">documentation</a>.</h4>
-      </div>
-    </div>
+<section class="container-fluid home-getstarted">
+  <div class="d-flex flex-column">
+    <h1>Get started with O3DE</h1>
+    <h4>Watch our introductory tutorial on O3DE below, or dive right into O3DE’s <a href="#" target="_blank">documentation</a>.</h4>
     <div class="row border getting-statred-view">
       <div class="col col-4">
         <img src="/img/home/GettingStarted1.jpg" class="getStatred-img">
