--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -19,8 +19,7 @@
           {{ end }}
 
           <p class="buttons">
-            <a href={{ $source }} class="my-3 mr-3 btn btn-lg text-white download-cta">Clone on GitHub</a>
-            <a href="/docs" class="my-3 mr-3 btn btn-lg text-white learnmore-cta">Learn more</a>
+            <a href="/download" class="my-3 mr-3 btn btn-lg text-white download-cta">Get Started</a>
           </p>
         </div>
       </div>
