--- a/layouts/partials/home/partners.html
+++ b/layouts/partials/home/partners.html
@@ -1,47 +1,15 @@
-<section class="container-fluid home-partners p-5">
-  <div class="container">
-    <div class="row">
-      <div class="col col-12">
-        <h2 class="text-center">Our Partners</h2>
-        <h5 class="text-center">O3DE is built by the community in conjunction with dedicated corporate partners, including the following companies.</h5>
-      </div>
-    </div>
-    <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="row align-items-center justify-content-center">
-            <div class="col">
-                <a href="#" target="_blank"><img src="/img/logos/partnerLogos/AccelByte-logo.svg" class="accelByte-logo"></a>
-            </div>
-            <div class="col">
-                <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Adobe-logo.svg" class="adobe-logo"></a>
-            </div>
-            <div class="col">
-                <a href="#" target="_blank"><img src="/img/logos/partnerLogos/ApocalypseStudios-logo.svg" class="aocalypseStudios-logo"></a>
-            </div>
-            <div class="col">
-                <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Audiokinetic-logo.svg" class="audiokinetic-logo"></a>
-            </div>
-            <div class="col">
-                <a href="#" target="_blank"><img src="/img/logos/partnerLogos/aws-logo.svg" class="aws-logo"></a>
-            </div>
-            <div class="col">
-                <a href="#" target="_blank"><img src="/img/logos/partnerLogos/backtrace-logo.svg" class="backtrace-logo"></a>
-            </div>
-            <div class="col">
-                <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Carbonated-logo.svg" class="carbonated-logo"></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+<section class="container-fluid home-partners  pl-xl-0 pr-xl-0">
+  <div class="d-flex flex-column align-items-center justify-content-center">
+    <h1>Our Community</h1>
+    <h4>O3DE is built by the community in conjunction with dedicated members, including the following organizations.</h4>
+    <div class="row align-items-center justify-content-center partners-logos-view">
+          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/AccelByte-logo.svg" class="accelByte-logo border rounded"></a>
+          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Adobe-logo.svg" class="adobe-logo border rounded"></a>
+          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/ApocalypseStudios-logo.svg" class="aocalypseStudios-logo border rounded"></a>
+          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Audiokinetic-logo.svg" class="audiokinetic-logo border rounded"></a>
+          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/aws-logo.svg" class="aws-logo border rounded"></a>
+          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/backtrace-logo.svg" class="backtrace-logo border rounded"></a>
+          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Carbonated-logo.svg" class="carbonated-logo border rounded"></a>
     </div>
   </div>
 </section>
