--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,8 +1,22 @@
 {{ $social := site.Params.social }}
+{{ $home   := site.BaseURL }}
+{{ $title  := site.Title }}
+{{ $logo   := site.Params.logos.navbar }}
+
 <footer class="footer text-white">
   <div class="container mt-5 pt-5 pb-5">
     <div class="row">
       <div class="col col-12 col-xl-8">
+        <div class="navbar-brand">
+          <a class="navbar-item" href="{{ $home }}">
+            {{ if $logo }}
+            {{ $url := printf "img/logos/%s" $logo | relURL }}
+              <img src="{{ $url }}" class="navbar-logo">
+            {{ else }}
+            {{ $title }}
+            {{ end }}
+          </a>
+        </div>
         {{ partial "footer-content.html" . }}
       </div>
       <div class="col col-12 col-xl-4">
