--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -5,29 +5,30 @@
 {{ $menu   := site.Menus.main }}
 
 <div class="main-navbar navbar navbar-dark navbar-expand-lg sticky-top" role="navigation" aria-label="main navigation">
-  <div class="container-fluid">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="{{ $home }}">
-        {{ if $logo }}
-        {{ $url := printf "img/logos/%s" $logo | relURL }}
-          <img src="{{ $url }}" class="navbar-logo">
-        {{ else }}
-        {{ $title }}
-        {{ end }}
-      </a>
-    </div>
-
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="main-nav">
-        {{ partial "menu-loop.html" . }}
-
-      </div>  
-
-      <div class="search">
-        {{ partial "search.html" }}
+  <div class="container-fluid d-flex flex-row justify-content-between">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="{{ $home }}">
+          {{ if $logo }}
+          {{ $url := printf "img/logos/%s" $logo | relURL }}
+            <img src="{{ $url }}" class="navbar-logo">
+          {{ else }}
+          {{ $title }}
+          {{ end }}
+        </a>
+      </div>
+  
+      <div class="d-flex flex-row align-items-center">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+    
+        <div class="collapse navbar-collapse" id="main-nav">
+          {{ partial "menu-loop.html" . }}
+        </div>  
+    
+        <div class="buttons">
+          <a href="#" target="_blank"><img src="/img/home/Search.svg"></a>
+        </div>
       </div>  
   </div> 
 </div>
