404 page changed to actual

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -7,7 +7,7 @@
                 <div class="content">
                     <para>Looks like you've found an empty page!</para>
                     <br/><br/>
-                    <!-- <para>Right now, the best place for you to go is back to the <a href="{{ (site.GetPage "section" "docs").RelPermalink }}">Documentation</a>.</para> -->
+                    <para>Right now, the best place for you to go is back to the <a href="{{ (site.GetPage "section" "docs").RelPermalink }}">Documentation</a>.</para>
                     <h2>Come here from a docs link?</h2>
                     <br/>
                     <para>
