--- a/layouts/partials/home/get-started.html
+++ b/layouts/partials/home/get-started.html
@@ -1,40 +1,31 @@
-<section class="container-fluid home-getstarted p-5">
-  <div class="container">
-    <div class="row">
-      <div class="col col-12">
-        <h2>Get started with O3DE</h2>
-        <p class="subhead">Watch these video tutorials to get started with O3DE!</p>
+<section class="container-fluid home-getstarted">
+  <div class="d-flex flex-column">
+    <h1>Get started with O3DE</h1>
+    <h4>Watch our introductory tutorial on O3DE below, or dive right into O3DE’s <a href="#" target="_blank">documentation</a>.</h4>
+    <div class="row border getting-statred-view">
+      <div class="col col-4">
+        <img src="/img/home/GettingStarted1.jpg" class="getStatred-img">
+      </div>
+      <div class="col col-8">
+        <h3>Article Tutorial 1</h3>
+        <div class="getstarted-text-width">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. In cursus turpis massa tincidunt dui. Et
+          ultrices neque ornare aenean euismod...
+        </div>
+        <a href="#" target="_blank">Learn more</a>
       </div>
     </div>
-    <div class="row home-videos">
-      <div class="col col-12 col-xl-4 mb-5">
-        <div class="card">
-          <img src="https://dummyimage.com/360x164/fff/aaa" class="card-img-top">
-          <div class="card-body">
-            <h5 class="card-title">Video tutorial 1</h5>
-            <p class="card-text">Text TBD</p>
-            <a href="#" class="btn btn-primary">Watch</a>
-          </div>
-        </div>
+    <div class="row border getting-statred-view">
+      <div class="col col-4">
+        <img src="/img/home/GettingStarted2.jpg" class="getStatred-img">
       </div>
-      <div class="col col-12 col-xl-4 mb-5">
-        <div class="card">
-          <img src="https://dummyimage.com/360x164/fff/aaa" class="card-img-top">
-          <div class="card-body">
-            <h5 class="card-title">Video tutorial 2</h5>
-            <p class="card-text">Text TBD</p>
-            <a href="#" class="btn btn-primary">Watch</a>
-          </div>
-        </div>
-      </div>
-      <div class="col col-12 col-xl-4 mb-5">
-        <div class="card">
-          <img src="https://dummyimage.com/360x164/fff/aaa" class="card-img-top">
-          <div class="card-body">
-            <h5 class="card-title">Video tutorial 3</h5>
-            <p class="card-text">Text TBD</p>
-            <a href="#" class="btn btn-primary">Watch</a>
-          </div>
+      <div class="col col-8">
+        <h3>Coming Soon...</h3>
+        <div class="getstarted-text-width">
+          We are currently working hard to give you a better experience and providing
+          more tutorials. If you want to check in on the creation process, you are
+          welcome to take a peek on <a href="#" target="_blank">GitHub</a>.
         </div>
       </div>
     </div>
