--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -138,10 +138,30 @@ code
 .navbar-dark .navbar-nav .nav-link
     color: $o3de-white
     &:hover 
-      color: $o3de-lightblue
+      color: #94D2FF; 
+
+.navbar-dark .navbar-nav li.active
+    &:hover 
+      .nav-link.active
+        color: #94D2FF;
+      div
+        background-color: #94D2FF;    
+        padding: 2px;
+        margin-left: 8px;
+        margin-right: 8px;
+
+.navbar-dark .navbar-nav .nav-link.active
+    color: #1E70EB;
+
+.navbar-dark .navbar-nav li.active div
+    background-color: #1E70EB;    
+    padding: 2px;
+    margin-left: 8px;
+    margin-right: 8px;
 
 .navbar-logo
   max-height: 36px
+  color: #FFFFFF
 
 // layouts/partials/hero.html, layouts/partial/download/hero.html
 
@@ -159,11 +179,15 @@ $width: '59vw';
 .home-hero 
   background-image: url('/img/home/hero.jpg')
   background-size: cover
+  height: 600px
+  width: 100%
     
 .hero-inner 
   margin-bottom: 0rem
   background-color: transparent
   color: $o3de-white
+  margin-right: 24px
+  margin-left: 124px
   .desc
     text-shadow: 8px 8px 8px #000
 
@@ -174,6 +198,9 @@ $width: '59vw';
 
 .download-cta 
   background-color: $o3de-blue
+  width: 150px
+  height: 36px
+  padding: 0
   &:hover 
     background-color: darken(#1E71EB, 10%)
 
@@ -192,11 +219,27 @@ $width: '59vw';
 // layouts/partials/home/features.html 
 
 .home-features 
-  background-color: $o3de-black 
-  background-image: url('/img/home/feature-bg-2.png')
-  background-position: center
-  background-repeat: no-repeat
+  background-color: #111111
   color: $o3de-white
+  margin-top: -34px
+  padding-top: 72px
+  padding-bottom: 72px
+
+.features-img
+  width: 100%
+  margin-left: -15px
+
+.features-text
+  padding-right: 280px
+  padding-left: 52px
+
+.features-img-reverse
+  width: 100%
+  margin-left: 15px
+
+.features-text-reverse
+  padding-left: 280px
+  padding-right: 52px
 
 .feature
   margin-top: 2rem
@@ -204,10 +247,97 @@ $width: '59vw';
   img
     width: 100%
 
+.features-mid-content
+  padding-top: 32px
+  padding-bottom: 32px
+
+
+
 // layouts/partials/home/partners.html 
 
-.home-logo 
-  max-width: 100%
+.home-partners
+  background-color: #EEEEEE
+  padding-top: 72px
+  padding-bottom: 72px
+
+.partners-logos-view
+  width: 80%
+  margin-top: 40px
+
+.accelByte-logo
+  background-color: white
+  padding: 35px 75px 35px 75px
+  margin: 12px
+
+.adobe-logo
+  background-color: white
+  padding: 35px 75px 35px 75px
+  margin: 9px
+
+.aocalypseStudios-logo
+  background-color: white
+  padding: 35px 75px 35px 75px
+  margin: 9px
+
+.audiokinetic-logo
+  background-color: white
+  padding: 40px 95px 40px 95px;
+  margin: 9px
+
+.aws-logo
+  background-color: white
+  padding: 35px 65px 35px 65px;
+  margin: 9px
+
+.backtrace-logo
+  background-color: white
+  padding: 30px 50px 30px 50px;
+  margin: 9px
+
+.carbonated-logo
+  background-color: white
+  padding: 25px 50px 25px 50px;
+  margin: 9px
+
+  
+// layouts/partials/home/get-statred.html 
+
+.home-getstarted
+  width: 70%
+  padding-top: 72px
+  padding-bottom: 72px
+
+.getting-statred-view
+  height: 180px
+  margin-top: 40px
+
+.getStatred-img
+  height: 100%
+  margin-left: -14px
+
+.getstarted-text-width
+  padding-right: 50px
+  margin-bottom: 10px
+
+  
+// layouts/partials/home/download.html 
+
+.home-download  
+  background-image: url('/img/home/download-bg.jpg')
+  background-size: cover;
+  background-repeat: no-repeat
+  color: $o3de-white
+  margin-bottom: -48px;
+  padding-top: 72px
+  padding-bottom: 72px
+
+.download-btn 
+  background-color: $o3de-blue
+  width: 240px
+  height: 36px
+  &:hover 
+    background-color: darken(#1E71EB, 10%)
+
 
 // layouts/footer.html 
 
@@ -219,8 +349,6 @@ $width: '59vw';
     &:hover, &:active 
       color: $o3de-darkblue
       text-decoration: none
-  @include media-breakpoint-up(lg)
-    height: 300px
 
 // layouts/social-buttons.html 
 
