--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -4,10 +4,13 @@
 <div class="scalable home-hero d-flex align-items-center">
   <div class="container-fluid hero-inner">
     <div class="row">
-      <div class="col col-12 col-xl-5 pl-5">
+      <div class="col col-12 col-xl-7 pl-7">
           <h1 class="title">
             {{ $title }}
           </h1>
+          <h3 class="title">
+            An open-source, real-time 3D development engine
+          </h3>
 
           {{ with $desc }}
           <p class="desc">
@@ -16,8 +19,7 @@
           {{ end }}
 
           <p class="buttons">
-            <a href={{ $source }} class="my-3 mr-3 btn btn-lg text-white download-cta">Clone on GitHub</a>
-            <a href="/docs" class="my-3 mr-3 btn btn-lg text-white learnmore-cta">Learn more</a>
+            <a href="/download" class="my-3 mr-3 btn btn-lg text-white download-cta">Get Started</a>
           </p>
         </div>
       </div>
