--- a/layouts/partials/home/partners.html
+++ b/layouts/partials/home/partners.html
@@ -1,32 +1,15 @@
-<section class="container-fluid home-partners p-5">
-  <div class="container">
-    <div class="row">
-      <div class="col col-12">
-        <h2 class="text-center">O3DE is supported by our partners:</h2>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col col-6 col-xl-4 p-xl-5 p-3">
-        <a href="#" target="_blank"><img src="/img/logos/cncf-color.png" class="home-logo"></a>
-      </div>
-      <div class="col col-6 col-xl-4 p-xl-5 p-3">
-        <a href="#" target="_blank"><img src="/img/logos/cncf-color.png" class="home-logo"></a>
-      </div>
-      <div class="col col-6 col-xl-4 p-xl-5 p-3">
-        <a href="#" target="_blank"><img src="/img/logos/cncf-color.png" class="home-logo"></a>
-      </div>
-      <div class="col col-6 col-xl-4 p-xl-5 p-3">
-        <a href="#" target="_blank"><img src="/img/logos/cncf-color.png" class="home-logo"></a>
-      </div>
-      <div class="col col-6 col-xl-4 p-xl-5 p-3">
-        <a href="#" target="_blank"><img src="/img/logos/cncf-color.png" class="home-logo"></a>
-      </div>
-      <div class="col col-6 col-xl-4 p-xl-5 p-3">
-        <a href="#" target="_blank"><img src="/img/logos/cncf-color.png" class="home-logo"></a>
-      </div>
-      <div class="col col-6 col-xl-4 p-xl-5 p-3">
-        <a href="#" target="_blank"><img src="/img/logos/cncf-color.png" class="home-logo"></a>
-      </div>
+<section class="container-fluid home-partners  pl-xl-0 pr-xl-0">
+  <div class="d-flex flex-column align-items-center justify-content-center">
+    <h1>Our Community</h1>
+    <h4>O3DE is built by the community in conjunction with dedicated members, including the following organizations.</h4>
+    <div class="row align-items-center justify-content-center partners-logos-view">
+          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/AccelByte-logo.svg" class="accelByte-logo border rounded"></a>
+          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Adobe-logo.svg" class="adobe-logo border rounded"></a>
+          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/ApocalypseStudios-logo.svg" class="aocalypseStudios-logo border rounded"></a>
+          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Audiokinetic-logo.svg" class="audiokinetic-logo border rounded"></a>
+          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/aws-logo.svg" class="aws-logo border rounded"></a>
+          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/backtrace-logo.svg" class="backtrace-logo border rounded"></a>
+          <a href="#" target="_blank"><img src="/img/logos/partnerLogos/Carbonated-logo.svg" class="carbonated-logo border rounded"></a>
     </div>
   </div>
 </section>
