--- a/layouts/docs/docs_landing.html
+++ b/layouts/docs/docs_landing.html
@@ -1,7 +1,6 @@
 {{ define "main" }}
 
 {{ $allSections  := site.Sections }} <!-- "blog" and "docs" -->
-{{ $introDocsSections := where $allSections "Section" "docs_welcome" }}
 {{ $docsSections := where $allSections "Section" "docs" }}
 
 <div class="container pt-3 px-5 pb-3">
@@ -12,16 +11,11 @@
     </div>
   </div>
   <div class="row mt-3">
-      {{ range $introDocsSections }}
-        {{ range $index, $value := .Sections }}
-          {{ if (eq $index 0) }}
+      {{ range $docsSections }}
+        {{ range where .Sections ".Page.LinkTitle" "Get Started" }}
             <div class="col col-12 col-lg-8 pb-3">
-          {{ else }}
-            <div class="col col-12 col-lg-4 pb-3">
-          {{ end }}
             <a href="{{ .RelPermalink }}" class="card doc_card intro">
               <div class="row">
-                {{ if (eq $index 0) }}
                   <div class="col-md-6 pb-20 card-image" style="background-image: url('{{ .Param "guide_img" }}')">
                   </div>
                   <div class="col-md-6">
@@ -30,18 +24,24 @@
                       <p class="card-text">{{ .Page.Description }}</p>
                     </div>
                   </div>
-                {{ else }}
-                  <div class="col-12">
-                    <div class="card-body">
-                      <h5 class="card-title"> {{ .Page.LinkTitle }}</h5>
-                      <p class="card-text">{{ .Page.Description }}</p>
-                    </div>
-                  </div>
-                {{ end }}
               </div>
             </a>
         </div>
       {{ end }}
+      {{ range where .Sections ".Page.LinkTitle" "Release Notes" }}
+          <div class="col col-12 col-lg-4 pb-3">
+          <a href="{{ .RelPermalink }}" class="card doc_card intro">
+            <div class="row">
+                <div class="col-12">
+                  <div class="card-body">
+                    <h5 class="card-title"> {{ .Page.LinkTitle }}</h5>
+                    <p class="card-text">{{ .Page.Description }}</p>
+                  </div>
+                </div>
+            </div>
+          </a>
+      </div>
+    {{ end }}
   {{ end }}
   </div>
   <div class="row flex">
@@ -54,7 +54,7 @@
   </div>
   <div class="row mt-3">
       {{ range $docsSections }}
-        {{ range .Sections }}
+        {{ range where (where .Sections ".Page.LinkTitle" "!=" "Get Started") ".Page.LinkTitle" "!=" "Release Notes" }}
         <div class="col col-lg-4 col-md-6 pb-3">
           <a href="{{ .RelPermalink }}" class="card doc_card">
               <img src="{{ .Param "guide_img" }}" class="card-img-top" alt="{{ .Page.Title }}">
